k8s/apps/frontend-mme/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-mme
  namespace: apps
  labels:
    app.kubernetes.io/name: frontend-mme
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: frontend-mme
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      nodePort: 30602
